--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 body  {
 
@@ -12,13 +13,20 @@ body  {
     justify-content: center;
     text-align: center;
     height: 100vh;
-    background-color: rgba(10,23,55,0.5);
     color: white;
     font-family: 'Lobster', cursive;
     
 
 }
+#imageBg{
+    height: 100vh;
+    width: 100vw;
+    background-repeat: round;
+    background-size: 20%;
+    filter: brightness(0.5);
 
+
+}
 #ChampName{
 
     position: absolute;
@@ -89,7 +97,7 @@ body  {
     padding: 2rem;
     border-radius: 20px;
     display: none;
-
+    position: absolute;
 
 }
 
@@ -114,8 +122,3 @@ select { width: 400px; text-align-last:center; }
 
 }
 
-html img{
-
-
-    transform: rotate(95deg);
-}
